--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "start": "concurrently \"cd Backend && uvicorn main:app --reload\" \"cd frontend && npm run dev\"",
     "start:backend": "cd Backend && uvicorn main:app --reload",
     "start:frontend": "cd frontend && npm run dev",
-    "install:all": "cd Backend && pip install -r requirements.txt && cd ../frontend && npm install"
+    "build": "npm run build:frontend && echo Backend ready (Python runs from source)",
+    "build:frontend": "cd frontend && npm run build",
+    "build:backend": "echo Backend is Python-based and runs from source - no build needed",
+    "install:all": "cd Backend && pip install -r requirements.txt && cd ../frontend && npm install",
+    "install:backend": "cd Backend && pip install -r requirements.txt",
+    "install:frontend": "cd frontend && npm install"
   },
   "keywords": [
     "cybersecurity",
