--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "scripts": {
     "start": "concurrently \"cd Backend && uvicorn main:app --reload\" \"cd frontend && npm run dev\"",
     "start:integrated": "npm run build:frontend && cd Backend && uvicorn main:app --reload",
-    "start:production": "npm run build:frontend && cd Backend && uvicorn main:app --host 0.0.0.0 --port 8000",
+    "start:production": "npm run build:frontend && cd Backend && uvicorn main:app --host 0.0.0.0 --port $PORT",
     "start:backend": "cd Backend && uvicorn main:app --reload",
     "start:frontend": "cd frontend && npm run dev",
     "build": "npm run build:frontend && echo ✅ Frontend built and integrated with backend",
     "build:frontend": "cd frontend && npm run build",
     "build:backend": "echo Backend is Python-based and runs from source - no build needed",
-    "install:all": "cd Backend && pip install -r requirements.txt && cd ../frontend && npm install",
+    "deploy:install": "npm install && cd frontend && npm install --legacy-peer-deps && cd ../Backend && pip install -r requirements.txt",
+    "deploy:build": "npm run deploy:install && npm run build:frontend",
+    "install:all": "cd Backend && pip install -r requirements.txt && cd ../frontend && npm install --legacy-peer-deps",
     "install:backend": "cd Backend && pip install -r requirements.txt",
-    "install:frontend": "cd frontend && npm install"
+    "install:frontend": "cd frontend && npm install --legacy-peer-deps"
   },
   "keywords": [
     "cybersecurity",
