--- a/render.yaml
+++ b/render.yaml
@@ -6,11 +6,8 @@ services:
     region: oregon
     plan: free
     branch: main
-    buildCommand: |
-      cd Backend
-      pip install --upgrade pip
-      pip install -r requirements.txt
-    startCommand: cd Backend && uvicorn main:app --host 0.0.0.0 --port $PORT
+    buildCommand: pip install --upgrade pip && pip install -r Backend/requirements.txt
+    startCommand: cd Backend && python -m uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.12.0
