--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "1.0.0",
   "description": "Chameleon Adaptive Deception System - Advanced Cybersecurity Honeypot",
   "scripts": {
-    "start": "concurrently \"cd Backend && uvicorn main:app --reload\" \"cd frontend && npm run dev\"",
-    "start:backend": "cd Backend && uvicorn main:app --reload",
+    "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
+    "start:backend": "cd Backend && source venv/bin/activate && python -m uvicorn main:app --reload --host 0.0.0.0 --port 8000",
     "start:frontend": "cd frontend && npm run dev",
-    "build": "npm run build:frontend && echo Backend ready (Python runs from source)",
-    "build:frontend": "cd frontend && npm run build",
-    "build:backend": "echo Backend is Python-based and runs from source - no build needed",
-    "install:all": "cd Backend && pip install -r requirements.txt && cd ../frontend && npm install",
-    "install:backend": "cd Backend && pip install -r requirements.txt",
-    "install:frontend": "cd frontend && npm install"
+    "build": "npm run build:backend && npm run build:frontend",
+    "build:backend": "cd Backend && python3.12 -m venv venv && source venv/bin/activate && pip install --upgrade pip && pip install -r requirements.txt",
+    "build:frontend": "cd frontend && npm install && npm run build",
+    "dev": "npm run start",
+    "install:all": "npm run build:backend && npm run install:frontend",
+    "install:backend": "cd Backend && source venv/bin/activate && pip install -r requirements.txt",
+    "install:frontend": "cd frontend && npm install",
+    "setup": "npm install && npm run build:backend && npm run install:frontend"
   },
   "keywords": [
     "cybersecurity",
