--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,6 @@
-REACT_APP_API_BASE_URL=http://localhost:8000
-REACT_APP_WS_URL=ws://localhost:8000
+# Development
 VITE_API_BASE_URL=http://localhost:8000
 VITE_WS_URL=ws://localhost:8000
+
+# Production (uncomment for production)
+# VITE_API_BASE_URL=https://chameleon-backend.onrender.com
