--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
     "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
     "start:backend": "cd Backend && source venv/bin/activate && python -m uvicorn main:app --reload --host 0.0.0.0 --port 8000",
     "start:frontend": "cd frontend && npm run dev",
-    "build": "npm run build:backend && npm run build:frontend",
-    "build:backend": "cd Backend && python3.12 -m venv venv && source venv/bin/activate && pip install --upgrade pip && pip install -r requirements.txt",
-    "build:frontend": "cd frontend && npm install && npm run build",
+    "build": "cd frontend && npm install && npm run build",
+    "start:render": "cd frontend && npm start",
     "dev": "npm run start",
-    "install:all": "npm run build:backend && npm run install:frontend",
-    "install:backend": "cd Backend && source venv/bin/activate && pip install -r requirements.txt",
+    "install:all": "cd Backend && pip install -r requirements.txt && cd ../frontend && npm install",
+    "install:backend": "cd Backend && pip install -r requirements.txt",
     "install:frontend": "cd frontend && npm install",
-    "setup": "npm install && npm run build:backend && npm run install:frontend"
+    "setup": "npm install && cd Backend && pip install -r requirements.txt && cd ../frontend && npm install"
   },
   "keywords": [
     "cybersecurity",
