--- a/frontend/.env
+++ b/frontend/.env
@@ -1,7 +1,7 @@
 # For integrated deployment (backend serves frontend)
 # Use empty string for same-origin requests
-VITE_API_BASE_URL=
+# VITE_API_BASE_URL=
 
-# For development with separate servers, uncomment:
-# VITE_API_BASE_URL=http://localhost:8000
-# VITE_WS_URL=ws://localhost:8000
+# For development with separate servers:
+VITE_API_BASE_URL=http://localhost:8000
+VITE_WS_URL=ws://localhost:8000
